force-app/main/default/objects/KB_Vector_Search_Config__c/KB_Vector_Search_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Vector search configuration. Mirrors Vector_Search_Config__mdt for DML-updatable wizard access.</description>
    <label>KB Vector Search Configuration</label>
</CustomObject>