force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Data_Space_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Space_Name__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Data Cloud data space name</description>
    <label>Data Space Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>