force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Class__c</fullName>
    <defaultValue>&quot;ConnectApiVectorSearchService&quot;</defaultValue>
    <description>Apex class implementing IVectorSearchService</description>
    <label>Implementation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>