force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether vector search is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>