force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Is_ADL__c.field-meta.xml
<CustomField>
    <fullName>Is_ADL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the configured search index is an Agentforce Data Library (ADL). An ADL ingests all article versions (Published, Draft, Archived), so when true the dedup vector query is prefiltered to currently-published content. When false (a custom Data Cloud index), the admin is expected to have scoped the index to published articles only (see README) — no automatic publish-status filter is applied.</description>
    <label>Is Agentforce Data Library (ADL)</label>
    <type>Checkbox</type>
</CustomField>