force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Max_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Results__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Maximum results per search</description>
    <label>Max Results</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>