force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Search_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Index_Name__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Data Cloud search index name</description>
    <label>Search Index Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>