force-app/main/default/objects/KB_Vector_Search_Config__c/fields/Similarity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Similarity_Threshold__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>Minimum similarity score for results</description>
    <label>Similarity Threshold</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>